<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/text_small_size" android:textColor="@color/localbule" android:id="@+id/exitExamBtn" android:background="@drawable/exit_exam_btn1_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/exam_exitBtnStr" />
    <Button android:textSize="@dimen/text_small_size" android:textColor="@color/localbule" android:id="@+id/exitSubmitExamBtn" android:background="@drawable/exit_exam_btn1_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/exam_exitSubmitBtnStr" />
    <Button android:textSize="@dimen/text_small_size" android:textColor="@color/localbule" android:id="@+id/exitCancelExamBtn" android:background="@drawable/exit_exam_btn1_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/exam_exitCancelStr" />
</LinearLayout>
