<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/reg_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/TopTitleLayout"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/topbj"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/returnbtn"
            android:layout_width="50.0dip"
            android:layout_height="30.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:background="@color/none"
            android:scaleType="centerCrop"
            android:src="@drawable/returnbtn1" />

        <ImageView
            android:id="@+id/TopLogoImg"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/toplogo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:gravity="center_horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/reg_logo" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip" >

        <TableRow android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_userNameStr"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />

            <EditText
                android:id="@+id/reg_userNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/whitetext_bg"
                android:hint="@string/reg_userNameHintStr"
                android:padding="5.0dip"
                android:textSize="@dimen/text_large_size" />
        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_userPwd1Str"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />

            <EditText
                android:id="@+id/reg_userPwd1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/whitetext_bg"
                android:hint="@string/reg_userPwdHintStr"
                android:inputType="textPassword"
                android:padding="5.0dip"
                android:textSize="@dimen/text_large_size" />
        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_userEmailStr"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />

            <EditText
                android:id="@+id/reg_userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/whitetext_bg"
                android:hint="@string/reg_userEmailHintStr"
                android:inputType="textEmailAddress"
                android:padding="5.0dip"
                android:textSize="@dimen/text_large_size" />
        </TableRow>
		<TableRow android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_userPhoneStr"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />

            <EditText
                android:id="@+id/reg_userPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/whitetext_bg"
                android:hint="@string/reg_userPhoneHintStr"
                android:inputType="phone"
                android:padding="5.0dip"
                android:textSize="@dimen/text_large_size" />
        </TableRow>
         <TableRow android:gravity="center_vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_userQQ"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />

            <EditText
                android:id="@+id/reg_userQQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/whitetext_bg"
                android:hint="@string/reg_userQQ"
                android:inputType="phone"
                android:padding="5.0dip"
                android:textSize="@dimen/text_large_size" />
        </TableRow>
<!--         <TableRow android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_validataCodeStr"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />

            <EditText
                android:id="@+id/reg_validateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/whitetext_bg"
                android:padding="5.0dip"
                android:singleLine="true"
                android:textSize="@dimen/text_large_size" />

            <com.kaoshida233.view.ValidateImageView
                android:id="@+id/validateView"
                android:layout_width="100.0dip"
                android:layout_height="40.0dip"
                android:clickable="true" />
        </TableRow> -->
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/reg_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_button_img"
            android:checked="true"
            android:text="@string/reg_readCheakStr"
            android:textColor="@color/black"
            android:textSize="@dimen/title_small_size" />

        <Button
            android:id="@+id/reg_treatyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:text="@string/reg_treatyStr"
            android:textColor="@color/blue"
            android:textSize="@dimen/title_small_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="10.0dip" >

        <Button
            android:id="@+id/reg_submitBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_suggestion_btn1_bg"
            android:text="@string/reg_subStr"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size" />
    </LinearLayout>

</LinearLayout>
