<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="fill_vertical" >

    <RelativeLayout
        android:id="@+id/TopTitleLayout3"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/topbj"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/returnbtn"
            android:layout_width="50.0dip"
            android:layout_height="30.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:background="@color/none"
            android:scaleType="centerCrop"
            android:src="@drawable/returnbtn1" />

        <TextView
            android:id="@+id/TopTitle2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:fadingEdge="vertical"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/menuabouttitle"
            android:textColor="@color/white"
            android:textSize="@dimen/title_huge_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/TopTitleLayout3"
        android:layout_margin="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="20.0dip"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/aboutImg"
                    android:layout_width="60.0dip"
                    android:layout_height="60.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:src="@drawable/youeclass_logo" />

                <TextView
                    android:id="@+id/appnametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_toRightOf="@id/aboutImg"
                    android:text="@string/app_name"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/title_medium_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/versionstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/appnametext"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_toRightOf="@id/aboutImg"
                    android:text="@string/versions"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_small_size" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/aboutText1"
                android:textColor="@color/black"
                android:textSize="@dimen/title_medium_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:lineSpacingExtra="2.0dip"
                android:text="@string/aboutText2"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:lineSpacingExtra="2.0dip"
                android:text="@string/aboutText3"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:lineSpacingExtra="2.0dip"
                android:text="@string/aboutText4"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:autoLink="web"
                android:text="@string/aboutText5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium_size" />
            <!--
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/aboutText6" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/aboutText7" />          -->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>