<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ashen"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/TopTitleLayout"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/topbj"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/returnbtn"
            android:layout_width="50.0dip"
            android:layout_height="30.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:background="@color/none"
            android:scaleType="centerCrop"
            android:src="@drawable/returnbtn1" />

        <TextView
            android:id="@+id/TopTitle1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/none"
            android:fadingEdge="vertical"
            android:gravity="center"
            android:text="@string/suggestionStr"
            android:textColor="@color/white"
            android:textSize="@dimen/title_huge_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickNameStr"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium_size" />

            <TextView
                android:id="@+id/nickNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_medium_size" 
                android:text="@string/commonNickname"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/suggestionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:background="@drawable/whitetext_bg1"
            android:gravity="top"
            android:hint="@string/suggestionHintStr"
            android:maxLines="8"
            android:minLines="5"
            android:padding="5.0dip"
            android:textSize="@dimen/text_small_size" />

        <Button
            android:id="@+id/submitSugBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:background="@drawable/submit_suggestion_btn1_bg"
            android:text="@string/submitStr1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size" />
    </LinearLayout>

</LinearLayout>